Kubernates/ingress/ab/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-v1
spec:
  selector:
    app: demo
    version: v1
  ports:
    - port: 80
      targetPort: 80
