Kubernates/ingress/ab/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-v2
spec:
  selector:
    app: demo
    version: v2
  ports:
    - port: 80
      targetPort: 80
